--- a/Example_1/package.json
+++ b/Example_1/package.json
@@ -3,6 +3,6 @@
 		"id": "com.mastertechapps.GettingStartedWithNativeScript"
 	},
 	"dependencies": {
-		"tns-core-modules": "1.4.0"
+		"tns-core-modules": "latest"
 	}
 }
